--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "author": "Ricardo Granvilla Oliveira (rgranvilla@gmail.com)",
   "license": "MIT",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "courses/ignite/reactjs_v2022/01_IgniteFeed/*",
+      "global/eslint-config/*"
+    ]
+  },
   "scripts": {
     "prepare": "husky install",
     "commit": "git-cz"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "*",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "prettier": "2.7.1",
+    "typescript": "^4.8.3"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
