feat(global): add uuid and date-fns dependencies

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "commit": "git-cz"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "*",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@rocketseat/eslint-config": "*",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^8.0.0",
@@ -32,5 +32,9 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3",
+    "uuid": "^9.0.0"
   }
 }
